--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -32,6 +33,17 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    //Third Party Libraries
+    implementation 'com.google.code.gson:gson:2.8.5'
+
+    // database-android room
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation platform('com.google.firebase:firebase-bom:29.2.0')
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
+//    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
