--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pdfeditormadtpeeps" >
+    package="com.example.pdfeditormadtpeeps">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -14,16 +14,31 @@
         android:required="false" />
 
     <application
+        android:name=".Utility.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PDFEditorMADTPEEPS" >
+        android:theme="@style/Theme.PDFEditorMADTPEEPS">
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+        <activity
+            android:name=".Activity.SignUpActivity"
+            android:theme="@style/Theme.PDFEditorMADTPEEPS.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.LoginActivity"
+            android:theme="@style/Theme.PDFEditorMADTPEEPS.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"
+            android:exported="false" />
         <activity
             android:name=".Activity.SplashActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,8 +47,7 @@
         </activity>
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="true" >
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
