--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
         </activity>
         <activity
             android:name=".Activity.MainActivity"
-            android:exported="true" />
+            android:theme="@style/Theme.PDFEditorMADTPEEPS.NoActionBar"  android:exported="true" />
     </application>
 
 </manifest>
