--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.pdfeditormadtpeeps">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -12,6 +13,12 @@
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"
+        android:anyDensity="true" />
 
     <application
         android:name=".Utility.MyApp"
@@ -20,6 +27,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
+        tools:ignore="ExtraText, GoogleAppIndexingWarning, RtlEnabled"
+        android:hardwareAccelerated="true"
+        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.PDFEditorMADTPEEPS">
 
         <meta-data
@@ -48,6 +59,20 @@
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
+
+        <activity
+            android:name="com.example.pdfeditormadtpeeps.Activity.RearrangePdfPages"
+            android:theme="@style/Theme.PDFEditorMADTPEEPS.NoActionBar" />
+        <activity
+            android:name="com.example.pdfeditormadtpeeps.Activity.OpenPdfActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.PDFEditorMADTPEEPS.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+        <activity
+            android:name="com.example.pdfeditormadtpeeps.Activity.FolderActivity"
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.PDFEditorMADTPEEPS.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
 
       <provider
             android:name="androidx.core.content.FileProvider"
